src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>TS_Postsecondary_Tracking_Cohort__c</fullName>
        <formula>IF( AND(ISPICKVAL(Post_Secondary_Enrollment_Status__c,&apos;Enrolled or Deferred PSE (TS)&apos;),OR(ISPICKVAL(Education_Status_at_End_Senior__c,&apos;Grad in standard num yrs (non-rigorous)&apos;),ISPICKVAL(Education_Status_at_End_Senior__c,&apos;Grad in standard num yrs (rigorous)&apos;),ISPICKVAL(Education_Status_at_End_Senior__c,&apos;Grad in non-standard num yrs&apos;))), 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2010-2011&apos;),&apos;2016-2017&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2011-2012&apos;),&apos;2017-2018&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2012-2013&apos;),&apos;2018-2019&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2013-2014&apos;),&apos;2019-2020&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2014-2015&apos;),&apos;2020-2021&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2015-2016&apos;),&apos;2021-2022&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2016-2017&apos;),&apos;2022-2023&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2017-2018&apos;),&apos;2023-2024&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2018-2019&apos;),&apos;2024-2025&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2019-2020&apos;),&apos;2025-2026&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2020-2021&apos;),&apos;2026-2027&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2021-2022&apos;),&apos;2027-2028&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2022-2023&apos;),&apos;2028-2029&apos;, 
IF (ISPICKVAL(Campaign.Service_Year__c ,&apos;2023-2024&apos;),&apos;2029-2030&apos;,&apos;&apos;)))))))))))))),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TS Postsecondary Tracking Cohort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_School_ID_AFEIP__c</fullName>
        <inlineHelpText>Target School - Identification Numbers, at first entry into project.</inlineHelpText>
        <label>Target School - ID (AFEIP)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_School__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Targeted School</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Targeted_School__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Targeted_School__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veteran_Status__c</fullName>
        <label>Veteran Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child of Active Duty US Military</fullName>
                </value>
                <value>
                    <fullName>Spouse of Active Duty US Military</fullName>
                </value>
                <value>
                    <fullName>Active Duty US Military</fullName>
                </value>
                <value>
                    <fullName>US Veteran</fullName>
                </value>
                <value>
                    <fullName>Yes (TS)</fullName>
                </value>
                <value>
                    <fullName>No response/Unknown</fullName>
                </value>
                <value>
                    <fullName>Not a Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Study_Position__c</fullName>
        <inlineHelpText>Work Study Position, for reporting year.</inlineHelpText>
        <label>Work Study Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (not offered)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>CPS_EOC</fullName>
        <active>true</active>
        <label>CPS - EOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_TS</fullName>
        <active>true</active>
        <label>CPS - TS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_UB</fullName>
        <active>true</active>
        <label>CPS - UB</label>
    </recordTypes>
</CustomObject>